--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
             </nav>
             <div class="nav-buttons">
                 <a href="#" style="color: var(--primary-blue); font-weight: 600;">Login</a>
-                <a href="learn.html" class="btn btn-primary">Try Free for 7 Days</a>
+                <a href="signup.html" class="btn btn-primary">Try Free for 7 Days</a>
             </div>
         </div>
     </header>
