--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                 <p class="hero-subhead">While other kids panic on unfamiliar questions, yours will confidently figure them out.
                 Our AI teaches the thinking skills schools don't—in just 15 minutes a day.</p>
                 <div class="hero-cta-group">
-                    <a href="learn.html" class="btn btn-primary btn-large">Try Free for 7 Days →</a>
+                    <a href="signup.html" class="btn btn-primary">Try Free for 7 Days</a>
                     <button class="btn btn-outline" onclick="document.getElementById('how-it-works').scrollIntoView({behavior: 'smooth'})">Watch 2-Min Demo ↓</button>
                 </div>
                 <div class="trust-row">
@@ -800,7 +800,7 @@
                     <div class="price-tag"> ৳ 0</div>
                     <p style="font-size: 14px; color: var(--text-gray); margin-top: -8px;">No credit card required</p>
                     <div style="margin: 32px 0;">
-                        <a href="learn.html" class="btn btn-outline btn-full">Start Free Trial</a>
+                        <a href="signup.html" class="btn btn-primary">Try Free for 7 Days</a>
                     </div>
                     <ul class="price-features">
                         <li><span class="text-green"> ✓ </span> Full unlimited access for 7 days</li>
@@ -938,7 +938,7 @@
         <div class="container text-center">
             <h2 style="font-size: 40px; margin-bottom: 24px;">Your Child Deserves to Feel Smart</h2>
             <p class="cta-subhead">500+ Bangladesh families have already seen the transformation. Try LogicPals free for 7 days.</p>
-            <a href="learn.html" class="btn cta-btn-large">Try Free for 7 Days (No Credit Card)</a>
+            <a href="signup.html" class="btn btn-primary">Try Free for 7 Days</a>
             <div class="cta-trust">
                 <span> ✓  Full access for 7 days</span>
                 <span> ✓  No credit card needed</span>
