--- a/signup.html
+++ b/signup.html
@@ -128,7 +128,7 @@
 
                 // 5. Success! Redirect to Learning
                 alert("Account created! Welcome, " + childName + "!");
-                window.location.href = "learn.html";
+                window.location.href = "dashboard.html";
 
             } catch (error) {
                 console.error(error);
