--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                 <a href="#faq">FAQ</a>
             </nav>
             <div class="nav-buttons">
-                <a href="#" style="color: var(--primary-blue); font-weight: 600;">Login</a>
+                <a href="login.html" style="...">Login</a>
                 <a href="signup.html" class="btn btn-primary">Try Free for 7 Days</a>
             </div>
         </div>
