--- a/signup.html
+++ b/signup.html
@@ -73,6 +73,9 @@
 
             <button type="submit" id="submitBtn" class="btn">Start Learning 🚀</button>
             <p class="error" id="errorMessage"></p>
+		<div style="text-align: center; margin-top: 20px; font-size: 14px;">
+    		Already have an account? <a href="login.html" style="color: #2563EB; font-weight: 600; text-decoration: none;">Log In</a>
+		</div>
         </form>
     </div>
 
