--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                     <button class="btn btn-outline" onclick="document.getElementById('how-it-works').scrollIntoView({behavior: 'smooth'})">Watch 2-Min Demo ↓</button>
                 </div>
                 <div class="trust-row">
-                    <div class="trust-item"><span> ✓ </span> 300+ Hand-Crafted Problems (Not Generated)</div>
+                    <div class="trust-item"><span> ✓ <span>✓</span> **Unlimited Practice for Class 3-6 Exams**</div>
                     <div class="trust-item"><span> ✓ </span> Used by 500+ Families in Bangladesh</div>
                     <div class="trust-item"><span> ✓ </span> No Credit Card  •  Cancel Anytime</div>
                 </div>
@@ -675,7 +675,7 @@
                 <div class="process-card">
                     <div class="step-badge">1</div>
                     <h3>Pick a Mystery to Solve</h3>
-                    <p>300+ hand-crafted challenges that feel like puzzles, not homework. Designed to make kids think: "Hmm... interesting. Let me try this."</p>
+                    <p>**Adaptive Curriculum that Grows with Your Child.**</p>
                 </div>
                 <div class="process-card">
                     <div class="step-badge">2</div>
@@ -848,7 +848,7 @@
                     <div class="daily-breakdown">That's only  ৳ 10/day - less than a coffee!</div>
                     <hr style="border: 0; border-top: 1px solid #E5E7EB; margin: 24px 0;">
                     <ul class="price-features">
-                        <li><span class="text-green"> ✓ </span> 300+ hand-crafted thinking problems</li>
+                        <li><span class="text-green"> ✓ </span> **Never runs out of new challenges**</li>
                         <li><span class="text-green"> ✓ </span> Unlimited AI Socratic tutoring sessions</li>
                         <li><span class="text-green"> ✓ </span> New problems added every week</li>
                         <li><span class="text-green"> ✓ </span> Advanced thinking-pattern analytics</li>
