--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
                     <p>That's the Socratic Method. And it works."</p>
                 </div>
                 <div style="margin-top: 30px; font-weight: 700; font-size: 20px; text-align: right; color: white;">
-                    - Tasbi, Founder
+                    - Jahir, Founder
                 </div>
             </div>
         </div>
