--- a/signup.html
+++ b/signup.html
@@ -86,15 +86,14 @@
 
             <button type="submit" id="submitBtn" class="btn">Start Learning 🚀</button>
             <p class="error" id="errorMessage"></p>
-		<div style="text-align: center; margin-top: 20px; font-size: 14px;">
-    		Already have an account? <a href="login.html" style="color: #2563EB; font-weight: 600; text-decoration: none;">Log In</a>
-		</div>
+            <div style="text-align: center; margin-top: 20px; font-size: 14px;">
+                Already have an account? <a href="login.html" style="color: #2563EB; font-weight: 600; text-decoration: none;">Log In</a>
+            </div>
         </form>
     </div>
 
     <script>
         const supabaseUrl = 'https://ovszuxerimbmzfblzkgd.supabase.co';
-        // PASTE YOUR KEY BELOW
         const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im92c3p1eGVyaW1ibXpmYmx6a2dkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ1MDA4MzgsImV4cCI6MjA4MDA3NjgzOH0.cmMF8OsC8J_B-t0aBldiMqv4XiNZtJWSGMqg8At9V14';
         const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
 
@@ -117,35 +116,26 @@
             err.style.display = 'none';
 
             try {
-                // 3. Sign Up Parent
+                // 3. Sign Up with Metadata (The Fix)
+                // We send the profile data directly to Supabase Auth.
+                // The Database Trigger will catch this and create the Tables automatically.
                 const { data: authData, error: authError } = await supabaseClient.auth.signUp({
                     email: email,
-                    password: password
+                    password: password,
+                    options: {
+                        data: {
+                            full_name: childName,   // This fixes "Hi Student"
+                            school_name: schoolName, // This fixes Leaderboard
+                            age: childAge,
+                            phone: phone
+                        }
+                    }
                 });
 
                 if (authError) throw authError;
 
-                // 4. Create Child Profile (Now including Phone!)
-                let ageCat = '8-9';
-                if (parseInt(childAge) === 10) ageCat = '9-10';
-                if (parseInt(childAge) >= 11) ageCat = '10-12';
-
-                // We try to insert the child. The 'parent_id' links it to the user we just made.
-                const { error: childError } = await supabaseClient
-                    .from('children')
-                    .insert([{
-                        parent_id: authData.user.id,
-                        name: childName,
-                        age: parseInt(childAge),
-                        age_category: ageCat,
-                        school_name: schoolName,
-                        parent_phone: phone, // <--- Saving Phone Here
-                        difficulty_level: 'medium'
-                    }]);
-
-                if (childError) throw childError;
-
-                // 5. Success!
+                // 4. Success!
+                // No manual insertion code here - it prevents the duplicate bug.
                 alert("Account created! Welcome, " + childName + "!");
                 window.location.href = "dashboard.html";
 
@@ -157,7 +147,6 @@
                 btn.disabled = false;
             }
         }
-    </script>
     </script>
 </body>
 </html>
